modify route again

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -4,7 +4,7 @@
     // Visit http://wbond.net/sublime_packages/sftp/settings for help
     
     // sftp, ftp or ftps
-    "type": "sftp",
+    "type": "",
     "save_before_upload":true,
     // "upload_on_save":true,
     "sync_down_on_open": true,
